--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -40,9 +40,9 @@ spring:
         serialization.indent_output: true
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:postgresql://localhost:5434/HopiestraWebSite
-        username: postgres
-        password: password
+        url: jdbc:postgresql://192.168.99.100:5432/HopiestraWebSite
+        username: HopiestraWebSite
+        password: 
     jpa:
         database-platform: io.github.jhipster.domain.util.FixedPostgreSQL82Dialect
         database: POSTGRESQL
