--- a/pom.xml
+++ b/pom.xml
@@ -515,7 +515,7 @@
                     <changeLogFile>src/main/resources/config/liquibase/master.xml</changeLogFile>
                     <diffChangeLogFile>src/main/resources/config/liquibase/changelog/${maven.build.timestamp}_changelog.xml</diffChangeLogFile>
                     <driver>org.postgresql.Driver</driver>
-                    <url>jdbc:postgresql://localhost:5432/HopiestraWebSite</url>
+                    <url>jdbc:postgresql://192.168.99.100:5432/HopiestraWebSite</url>
                     <defaultSchemaName></defaultSchemaName>
                     <username>HopiestraWebSite</username>
                     <password></password>
