--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -34,7 +34,7 @@ spring:
             enabled: false
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:postgresql://localhost:5432/HopiestraWebSite
+        url: jdbc:postgresql://192.168.99.100:5432/HopiestraWebSite
         username: HopiestraWebSite
         password:
     jpa:
