--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@angular/platform-browser-dynamic": "5.2.0",
     "@angular/router": "5.2.0",
     "@ng-bootstrap/ng-bootstrap": "1.0.0",
-    "angular-froala-wysiwyg": "^2.8.4",
     "bootstrap": "4.0.0",
     "core-js": "2.4.1",
     "font-awesome": "^4.7.0",
@@ -24,7 +23,10 @@
     "ng-jhipster": "0.4.0",
     "ngx-cookie": "2.0.1",
     "ngx-infinite-scroll": "0.5.1",
+    "ngx-quill": "^4.0.0",
     "ngx-webstorage": "2.0.1",
+    "quill": "^1.3.6",
+    "quill-image-resize-module": "^3.0.0",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.5.6",
     "swagger-ui": "2.2.10",
